refactor: enhance keymap and settings for improved editor navigation and panel layout

--- a/.config/zed/settings.json
+++ b/.config/zed/settings.json
@@ -1,5 +1,15 @@
 {
+  "project_panel": {
+    "dock": "right"
+  },
+  "git_panel": {
+    "dock": "right"
+  },
+  "outline_panel": {
+    "dock": "right"
+  },
   "assistant": {
+    "dock": "left",
     "default_model": {
       "provider": "copilot_chat",
       "model": "gpt-4o"
