--- a/.config/zed/settings.json
+++ b/.config/zed/settings.json
@@ -1,25 +1,50 @@
 {
-  "project_panel": {
-    "dock": "right"
-  },
-  "git_panel": {
-    "dock": "right"
-  },
-  "outline_panel": {
-    "dock": "right"
-  },
-  "assistant": {
-    "dock": "left",
-    "default_model": {
-      "provider": "copilot_chat",
-      "model": "gpt-4o"
-    },
-    "version": "2"
-  },
+  "autosave": "on_window_change",
+  "format_on_save": "on",
+  "icon_theme": "Material Icon Theme",
   "features": {
     "edit_prediction_provider": "zed"
   },
-  "icon_theme": "Material Icon Theme",
+  // Use Copilot Chat AI as default
+  "assistant": {
+    "default_profile": "write",
+    "profiles": {
+      "agent": {
+        "name": "Agent",
+        "tools": {
+          "thinking": true,
+          "terminal": true,
+          "symbol_info": true,
+          "rename": true,
+          "regex_search": true,
+          "read_file": true,
+          "path_search": true,
+          "open": true,
+          "now": true,
+          "move_path": true,
+          "list_directory": true,
+          "find_replace_file": true,
+          "fetch": true,
+          "diagnostics": true,
+          "delete_path": true,
+          "create_file": true,
+          "copy_path": true,
+          "code_actions": true,
+          "code_symbols": true,
+          "create_directory": true,
+          "batch_tool": true
+        },
+        "enable_all_context_servers": false,
+        "context_servers": {}
+      }
+    },
+    "dock": "left",
+    "default_model": {
+      "provider": "zed.dev",
+      "model": "claude-3-7-sonnet-latest"
+    },
+    "version": "2"
+  },
   "terminal": {
     "cursor_shape": "bar"
   },
@@ -54,7 +79,69 @@
     "ss20": true
   },
   "buffer_font_size": 14,
-  "autosave": "on_focus_change",
+  "ui_font_size": 17,
+  // Finder model width
+  "file_finder": {
+    "modal_max_width": "medium"
+  },
+  "scrollbar": {
+    "show": "auto"
+  },
+  "tabs": {
+    "show_diagnostics": "errors",
+    "file_icons": true,
+    "git_status": true
+  },
+  // Indentation, rainbow indentation
+  "indent_guides": {
+    "enabled": true,
+    "line_width": 1,
+    "active_line_width": 1,
+    "coloring": "indent_aware"
+  },
+  "gutter": {
+    "enabled": true
+  },
+  // LSP
+  "lsp": {
+    "tailwindcss-language-server": {
+      "settings": {
+        "classAttributes": ["class", "className", "ngClass", "styles"]
+      }
+    },
+    "rust-analyzer": {
+      "initialization_options": {
+        "checkOnSave": {
+          "command": "clippy"
+        }
+      }
+    }
+  },
+  "languages": {
+    "Rust": {
+      "enable_language_server": true,
+      "language_servers": ["rust-analyzer"]
+    },
+    "TypeScript": {
+      "inlay_hints": {
+        "enabled": true,
+        "show_parameter_hints": false,
+        "show_other_hints": true,
+        "show_type_hints": true
+      }
+    },
+    "Python": {
+      "format_on_save": { "language_server": { "name": "ruff" } },
+      "formatter": { "language_server": { "name": "ruff" } },
+      "language_servers": ["pyright", "ruff"]
+    }
+  },
+  // File syntax highlighting
+  "file_types": {
+    "Dockerfile": ["Dockerfile", "Dockerfile.*"],
+    "JSON": ["json", "jsonc", "*.code-snippets"]
+  },
+  // File scan exclusions, hide on the file explorer and search
   "file_scan_exclusions": [
     "**/.git",
     "**/.svn",
@@ -64,33 +151,38 @@
     "**/Thumbs.db",
     "**/.classpath",
     "**/.settings",
-    "**/.nuxt",
-    "**/.output",
-    "**/.pnpm",
-    "**/.vscode",
-    "**/.yarn",
-    "**/bower_components",
-    "**/dist/**",
-    "**/logs",
-    "**/node_modules",
-    "**/out/**",
-    "**/package-lock.json",
-    "**/pnpm-lock.yaml",
-    "**/tmp",
-    "**/yarn.lock"
+    // above is default from Zed
+    "**/out",
+    "**/.husky",
+    "**/.turbo",
+    "**/.vscode-test",
+    "**/.next",
+    "**/.storybook",
+    "**/.tap",
+    "**/.nyc_output"
   ],
-  "language_overrides": {
-    "Rust": {
-      "show_edit_predictions": true
-    },
-    "lsp": {
-      "rust-analyzer": {
-        "initialization_options": {
-          "checkOnSave": {
-            "command": "clippy"
-          }
-        }
-      }
-    }
+  // Turn off telemetry
+  "telemetry": {
+    "diagnostics": false,
+    "metrics": false
+  },
+  // Move all panel to the right
+  "git_panel": {
+    "dock": "right"
+  },
+  "project_panel": {
+    "button": true,
+    "dock": "right",
+    "git_status": true
+  },
+  "outline_panel": {
+    "dock": "left"
+  },
+  // Move some unnecessary panels to the left
+  "notification_panel": {
+    "dock": "left"
+  },
+  "chat_panel": {
+    "dock": "left"
   }
 }
