feat: Enhance dotfiles with Zsh completions, new SSH configurations, Zed Git tree view, updated Git work path, and extended Android SDK paths.

--- a/.config/zed/settings.json
+++ b/.config/zed/settings.json
@@ -129,6 +129,7 @@
   },
   // Move all panel to the right
   "git_panel": {
+    "tree_view": true,
     "dock": "right"
   },
   "project_panel": {
